Updated DetectAdjacentProperties documentation and code cleaning