@@ -1,32 +1,63 @@
 package DetectAdjacentProperties;
 
-import DetectAdjacentProperties.*;
 import Models.*;
+import Utils.Annotations.CyclomaticComplexity;
+import Utils.Annotations.Layer;
+import Utils.Enums.LayerType;
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * Utility class responsible for merging adjacent properties that belong to the same owner.
+ * The {@code PropertyMerger} class provides functionality to merge adjacent properties
+ * with the same owner into unified properties. Properties are considered adjacent if they
+ * share at least one vertex.
  */
+@Layer(LayerType.BACK_END)
 public class PropertyMerger {
 
     /**
-     * Merges adjacent properties with the same owner into single unified properties.
-     * Properties are considered adjacent if they share at least one vertex.
+     * Merges adjacent properties with the same owner into unified properties.
+     * It identifies groups of properties that are adjacent and have the same owner,
+     * and merges them into a single property.
      *
-     * @param properties A list of {@link PropertyPolygon} representing all original properties.
-     * @return A list of {@link PropertyPolygon} with merged properties, replacing the original adjacent groups.
+     * @param properties A list of PropertyPolygon objects representing the properties to be merged.
+     * @return A list of PropertyPolygon objects after merging adjacent properties.
      */
+    @CyclomaticComplexity(1)
     public static List<PropertyPolygon> mergeOwnerAdjacentProperties(List<PropertyPolygon> properties) {
-        // Map from vertex to the list of properties that contain that vertex
+        Map<VertexCoordinate, List<PropertyPolygon>> vertexMap = buildVertexMap(properties);
+        Map<Integer, Set<Integer>> adjacencyMap = buildAdjacencyMap(vertexMap);
+        List<List<Integer>> groups = findConnectedComponents(properties, adjacencyMap);
+        return mergeProperties(properties, groups);
+    }
+
+    /**
+     * Merges adjacent properties with the same owner into unified properties.
+     * It identifies groups of properties that are adjacent and have the same owner,
+     * and merges them into a single property.
+     *
+     * @param properties A list of PropertyPolygon objects representing the properties to be merged.
+     * @return A list of PropertyPolygon objects after merging adjacent properties.
+     */
+    @CyclomaticComplexity(3)
+    private static Map<VertexCoordinate, List<PropertyPolygon>> buildVertexMap(List<PropertyPolygon> properties) {
         Map<VertexCoordinate, List<PropertyPolygon>> vertexMap = new HashMap<>();
         for (PropertyPolygon property : properties) {
             for (VertexCoordinate vertex : property.getPolygon().getVertices()) {
                 vertexMap.computeIfAbsent(vertex, k -> new ArrayList<>()).add(property);
             }
         }
+        return vertexMap;
+    }
 
-        // Build adjacency graph based on shared vertices and matching owners
+    /**
+     * Builds an adjacency map from the vertex map, where each property ID is associated with a set of adjacent property IDs.
+     *
+     * @param vertexMap A map where keys are VertexCoordinate objects and values are lists of PropertyPolygon objects.
+     * @return A map where keys are property IDs and values are sets of adjacent property IDs.
+     */
+    @CyclomaticComplexity(5)
+    private static Map<Integer, Set<Integer>> buildAdjacencyMap(Map<VertexCoordinate, List<PropertyPolygon>> vertexMap) {
         Map<Integer, Set<Integer>> adjacencyMap = new HashMap<>();
         for (List<PropertyPolygon> sharedProps : vertexMap.values()) {
             for (int i = 0; i < sharedProps.size(); i++) {
@@ -43,8 +74,18 @@ public class PropertyMerger {
                 }
             }
         }
+        return adjacencyMap;
+    }
 
-        // Identify connected components of adjacent properties with the same owner
+    /**
+     * Finds connected components of properties that are adjacent and have the same owner.
+     *
+     * @param properties A list of PropertyPolygon objects representing the properties to be merged.
+     * @param adjacencyMap A map where keys are property IDs and values are sets of adjacent property IDs.
+     * @return A list of lists, where each inner list contains the IDs of properties in the same connected component.
+     */
+    @CyclomaticComplexity(9)
+    private static List<List<Integer>> findConnectedComponents(List<PropertyPolygon> properties, Map<Integer, Set<Integer>> adjacencyMap) {
         Set<Integer> visited = new HashSet<>();
         List<List<Integer>> groups = new ArrayList<>();
 
@@ -73,19 +114,28 @@ public class PropertyMerger {
 
             if (group.size() > 1) groups.add(group);
         }
+        return groups;
+    }
 
-        // Map from property ID to the PropertyPolygon instance
+    /**
+     * Merges properties in the same group into a single property.
+     *
+     * @param properties A list of PropertyPolygon objects representing the properties to be merged.
+     * @param groups A list of lists, where each inner list contains the IDs of properties in the same connected component.
+     * @return A list of PropertyPolygon objects after merging adjacent properties.
+     */
+    @CyclomaticComplexity(5)
+    private static List<PropertyPolygon> mergeProperties(List<PropertyPolygon> properties, List<List<Integer>> groups) {
         Map<Integer, PropertyPolygon> idToProperty = properties.stream()
                 .collect(Collectors.toMap(PropertyPolygon::getObjectId, p -> p));
 
-        // Merge grouped properties into new PropertyPolygon instances
         Set<Integer> mergedIds = new HashSet<>();
         List<PropertyPolygon> mergedList = new ArrayList<>();
 
         for (List<Integer> group : groups) {
             List<PropertyPolygon> groupProps = group.stream()
                     .map(idToProperty::get)
-                    .collect(Collectors.toList());
+                    .toList();
 
             PropertyPolygon base = groupProps.get(0);
             double totalArea = 0;
@@ -115,7 +165,6 @@ public class PropertyMerger {
             mergedIds.addAll(group);
         }
 
-        // Add non-merged properties to the final list
         for (PropertyPolygon p : properties) {
             if (!mergedIds.contains(p.getObjectId())) {
                 mergedList.add(p);
@@ -124,4 +173,5 @@ public class PropertyMerger {
 
         return mergedList;
     }
+
 }
